css/main.css
/* ... */
#top_logo p {
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-size: 16px;
    line-height: 17px;
}
@media screen and (max-width: 768px) {
    #top {
        height: 355px;
        background-position: center;
    }
    #top .inner {
        height: 355px;
    }
    #top_logo {
        top: 150px;
    }
    #top_logo h1 {
        font-size: 64px;
        line-height: 64px;
    }
    #top_logo p {
        font-size: 14px;
        line-height: 15px;
    }
}

/* concept */
#concept {
    display: block;
    width: 100%;
    background: #FFFFFF;
    position: relative;
}
#concept .inner {
    width: 100%;
    padding-top: 80px;
    padding-bottom: 553px;
}
#concept .concept_img {
    display: block;
    width: 960px;
    height: auto;
    position: absolute;
    top: 298px;
    left: calc((100% - 960px)*0.5);
    z-index: 2;
}
#concept .concept_under {
    display: block;
    width: 100%;
    height: 240px;
    background-color: #EDEDED;
    position: absolute;
    top: 560px;
    z-index: 1;
}
@media screen and (max-width: 992px) {
    #concept .concept_img {
        width: 100%;
        height: 400px;
        object-fit: cover; /* not for IE*/
        left: 0;
    }
}
@media screen and (max-width: 768px) {
    #concept .concept_img {
        width: calc(100% - 40px);
        top: 245px;
        left: 20px;
    }
    #concept .inner {
        padding-top: 40px;
        padding-bottom: 474px; /* todo fix*/
    }
    #concept .concept_under {
        height: 150px;
        background-color: #EDEDED;
        position: absolute;
        top: 540px;
        z-index: 1;
    }
}
/* work */
#work {
    display: block;
    width: 100%;
    background: #FFFFFF;
}
#work .inner {
    padding-top: 80px;
    padding-bottom: 100px;
}
#work .work_contents {
    display: block;
    width: 960px;
    margin-top: 40px;
}
#work .work_contents::after {
    content: "";
    clear: both;
    display: block;
}
#work .work_content {
    display: block;
    width: 420px;
}
#work .work_content_dis h1 {
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    font-size: 24px;
    line-height: 40px;
    color: #333333;
    margin-top: 16px;
}
#work .work_content_dis p {
    font-size: 16px;
    line-height: 28px;
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #2B2B2B;
}
#work .work_contents .work_content:nth-child(odd) {
    float: left;
    margin-bottom: 80px;
}
#work .work_contents .work_content:nth-child(even) {
    float: right;
    margin-top: 120px;
}
@media screen and (max-width: 992px) {
    #work .inner {
        width: 100%;
        padding-bottom: 80px;
    }
    #work .work_contents {
        width: 100%;
    }
    #work .work_contents .work_content {
        width: 100%;
    }
    #work .work_contents .work_content img {
        width: calc(100% - 40px);
        height: 370px;
        margin: 0 20px;
        object-fit: cover
    }
    #work .work_contents .work_content .work_content_dis {
        width: calc(100% - 40px);
        margin: 0 20px 20px;
    }
    #work .work_contents .work_content:nth-child(odd) {
        float: none;
        display: block;
        margin-bottom: 0;
    }
    #work .work_contents .work_content:nth-child(even) {
        float: none;
        display: block;
        margin-top: 0;
        position: relative;
    }
}
@media screen and (max-width: 768px) {
    #work .inner {
        padding-top: 40px;
        padding-bottom: 20px;
    }
    #work .work_contents {
        white-space: nowrap;
        overflow-x: auto;
        -webkit-overflow-scrolling: touch;
        width: calc(100% - 40px);
        margin: 24px 20px 0;
        display: flex;
    }
    #work .work_contents::-webkit-scrollbar {
        height: 5px;
    }
    ::-webkit-scrollbar-track {
        border-radius: 10px;
        background: #EDEDED;
        
    }
    ::-webkit-scrollbar-thumb {
        border-radius: 10px;
        background: #A0A0A0;
    }
    #work .work_contents .work_content {
        display: block;
        width: 420px;
        margin-right: 20px;
        position: static;
    }
    #work .work_contents .work_content img {
        width: 420px;
        height: 200px;
        margin: 0;
    }
    #work .work_contents .work_content .work_content_dis {
        width: 420px;
        margin: 0 0 20px;
        white-space: normal;
    }
}
/* florist */
#florist {
    display: block;
    width: 100%;
    background: #FFFFFF;
    position: relative;
    z-index: -2;
    padding-top: 80px;
    padding-bottom: 40px;
}
#florist .florist_contents {
    display: block;
    width: 960px;
    margin: 40px auto 0;
    letter-spacing: -1em; /* 文字間を詰める */
    white-space: nowrap; /* 自動で折り返ししない */
}
#florist .florist_content {
    display: inline-block;
    width: 300px;
    margin-right: 30px;
    letter-spacing: normal; /* 文字間を元に戻す */
    white-space: normal; /* 自動で折り返し(元に戻す) */
    vertical-align: top; /* 高さ合わせ*/
}
#florist .florist_content h1 {
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
    font-size: 24px;
    line-height: 40px;
    color: #333333;
    margin-top: 12px;
}
#florist .florist_content p {
    font-size: 16px;
    line-height: 22px;
    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #2B2B2B;
}
#florist .florist_top {
    display: block;
    width: 100%;
    height: 374px;
    background-color: #EDEDED;
    position: absolute;
    top: 0;
    z-index: -1;
}
/* ... */

